[gd_scene load_steps=9 format=2]

[ext_resource path="res://Actor/Actor.gd" type="Script" id=1]
[ext_resource path="res://Actor/Healthbar.gd" type="Script" id=2]
[ext_resource path="res://Actor/Weapons.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Attack"

[sub_resource type="Animation" id=2]
resource_name = "Idle"

[sub_resource type="Animation" id=3]
resource_name = "Run"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="Actor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/Attack = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Weapons" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Healthbar" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="Healthbar"]
margin_right = 64.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Healthbar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Healthbar"]
[connection signal="update_health_bar" from="." to="Healthbar" method="_on_Actor_update_health_bar"]
[connection signal="on_health_bar_died" from="Healthbar" to="." method="die"]
[connection signal="on_updated" from="Healthbar" to="." method="_on_Healthbar_on_updated"]
